# openrct2-dependencies-android

./: CMakeLists.txt  Dockerfile  arm-android-dynamic.cmake  arm64-android-dynamic.cmake  autoconf-png.sh  autoconf.sh  build.sh  sdl.patch  x64-android-dynamic.cmake
.github/workflows/: blank.yml  ci.yml
project/: vcpkg.json
